# finance_manager_app

./: .gitignore  README.md  README.rst  database.db  finance_manager_app.py  main.py  pyproject.toml  requirements.txt
app/: read.py
database/: __init__.py  add.py  delete.py  read.py
function_for_app/: delete_all.py  function_add.py  function_delete_element.py  install_libs.py
src/: constants.py  logger.py  main.py
src/database/: add.py  class_template.py  delete.py  model.py  read.py
